--- 2.1.16 2006/03/31 

Allow multiple languages and charsets to be specified with
yaz-client. Each item must be separated by comma (NO BLANKS). E.g.
  negcharset iso-8859-1,utf-8

Translation of proximity nodes from CQL into PQF now works.

Moved to automake 1.8, 1.9.

Added function yaz_log_set_handler which allows a log handler
to be installed. This handler will be called for all log messages.
Output to file is also produced; but that can be disabled by passing
NULL fname to yaz_log_init_file.

Fixed another problem with MARC-8 -> ISO-8859-1 conversions. Bug #537.

For SRW (including GFS), accept application/soap+xml as content-type
for SOAP msg.

For GFS in SRU mode, an empty stylesheet in SRU URL (&stylesheet=&)
produces NO stylesheet reference even if a default stylesheet is specified
in GFS XML config.

--- 2.1.14 2006/03/14 

Updated Windows package to include yazd.dll + yazd.lib for the
Development component.

If the environment variable YAZ_LOG is set, then it is used as a
string indicating the default level of logging to use if not
overridden by calls to yaz_log_init() or yaz_log_init_level().  If
it's not defined, then the manifest constant YLOG_DEFAULT_LEVEL is
used as before.  So, for example, to omit warnings from YAZ logging,
	export YAZ_LOG=-warn

cql_transform() now map structure and other attributes before indexes,
so that index-specific structures and other attributes can override
defaults.  So now a combination of mapping specifications such as:
	structure.* = 4=1
	index.dc.date = 1=date-modified 4=5
does the right thing.

cql_transform() now also respects the "always" mapping specification,
which establishes an initial set of attributes to be used for all
terms except where overridden by more specific attributes associated
with the index, relation or modifier.

Added SRU-GET and SRU-POST support for ZOOM C. Option "sru" specifies
which mode to use; one of "post", "get" or "soap" (SRW, default).
