@@ -1,3 +1,6 @@
+Added a new ZOOM event type ZOOM_EVENT_END which signals no more events
+to be returned for this connection.
+
 --- 2.1.16 2006/03/31 
 
 Allow multiple languages and charsets to be specified with
